src/components/FileUpload/FileUpload.module.scss
.FileUploadWrapper {
  clear: both;
  float: left;
}

.RadioGroup {
  float: left;
  clear: right;
  margin-bottom: 1%;
}

.FileUploadComponentWrapper {
  width: 20vw;
  clear: both;
  float: left;
}

.FileUpload {
  width: 100%;
}

.SubmitButton {
  float: left;
}

.InstructionsWrapper {
  float: left;
  text-align: left;
}

.CollapseButton {
  float: left;
  margin-bottom: 2%;
}

.InstructionWrapper {
  clear: both;
  float: left;
  display: block;
  text-align: center;
  width: fit-content;
}

.InstructionText {
  text-align: left;
  background-color: #F0F0F0;
  padding: 1%;
}

.StatusMessage {
  clear: both;
}

